# LLM-NER-metrics

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
evaluation_metrics_for_large_language_models_in_a_named_entity_extraction_task/: __init__.py  dataset.py  features.py  plots.py
evaluation_metrics_for_large_language_models_in_a_named_entity_extraction_task/modeling/: predict.py  train.py
models/: cadec_corpus_01.ft  llm_ner.py  llm_text_embeddings.py  metric.py  traditional_metrics.py
notebooks/: dataset_generation.ipynb  docs_similarity.ipynb  fasttext_train_model.ipynb  short_text_embeddings.ipynb  test_metrics.ipynb  test_on_benchmark.ipynb  test_on_use_cases.ipynb  word_tags_dataset_generation.ipynb
references/notes from ner research/: Bibliography.md  Metric.md  TODO.md  template.md
references/notes from ner research/.obsidian/: graph.json  workspace.json
references/notes from ner research/Data Sets/: ACE 2004.md  ACE 2005.md  BioNLP.md  CADEC.md  CoNLL-2002.md  CoNLL-2003.md  GENIA.md  NNE.md  OntoNotes.md  ShARe 13.md  ShARe 14.md
references/notes from ner research/Master Thesis/: 00 - Streszczenie.md  Conspect.md
references/notes from ner research/My work/: Benchmark.md  Gen AI Use.md  Metric.md  Use Cases.md
references/notes from ner research/NER Methods/: Grid-tagging.md  Hypergraph-based.md  Layer-based.md  Object detection.md  Sequence Labeling.md  Sequence-to-sequence.md  Span Based.md
util/: approach-1-benchmark-mod.ipynb  dataset_generation.ipynb
(+34 files in other folders)
