[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "evaluation_metrics_for_large_language_models_in_a_named_entity_extraction_task"
version = "0.0.1"
description = "..."
authors = [
  { name = "Bogna Kilanowska" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["evaluation_metrics_for_large_language_models_in_a_named_entity_extraction_task"]
force_sort_within_sections = true
